--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <button onclick="getquote(api_url)">New Quote</button>
             <button onclick="chooseSocialMedia()">Share</button>
         </div>
+        <div class="owner">
+            <p>
+                designed by @jayd
+            </p>
+        </div>
     </div>
 <script>
 const quote = document.getElementById("quote");
